--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -45,7 +45,14 @@
   font-weight: bold;
 }
 
+input,
+textarea,
+span {
+  -webkit-user-modify: read-write;
+}
+
 body {
+  height: 100vh;
   color: var(--color-text);
   background: var(--color-background-soft);
   transition: color 0.5s, background-color 0.5s;
